--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,5 @@
 .h-100.bg-light
-  .text-center.border-bottom.py-3.mb-5.bg-dark
+  .text-center.border-bottom.py-3.mb-5.bg-dark.fixed-top
     = render partial:"shared/menu"
     .h1.text-light
       設備管理システム
